# elf-analysis-tool

./: CMakeLists.txt  LICENSE  README.md  elf_analysis_tool.c
include/: ELFAnalysis.h  LoadBinaryFile.h  types.h
libs/: CMakeLists.txt
libs/ELFAnalysis/: CMakeLists.txt  ELFAnalysis.c
libs/LoadBinaryFile/: CMakeLists.txt  LoadBinaryFile.c
